--- a/index.html
+++ b/index.html
@@ -4,42 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lua Obfuscator</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-            text-align: center;
-        }
-        textarea {
-            width: 80%;
-            height: 200px;
-            margin: 10px 0;
-            padding: 10px;
-            font-size: 16px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin: 10px;
-            cursor: pointer;
-        }
-        #output {
-            background-color: #f4f4f4;
-            padding: 10px;
-            margin-top: 20px;
-            white-space: pre-wrap;
-            word-wrap: break-word;
-            border: 1px solid #ccc;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lua Obfuscator</h1>
-    <p>Nhập mã Lua bên dưới để làm rối:</p>
-    <textarea id="inputCode" placeholder="Nhập mã Lua..."></textarea><br>
-    <button id="obfuscateButton">Obfuscate</button>
-    <h2>Mã đã obfuscate:</h2>
-    <div id="output"></div>
-    <script src="obfuscator.js"></script>
+    <div class="container">
+        <textarea id="inputCode" placeholder="Nhập mã Lua của bạn vào đây..."></textarea>
+        <button id="obfuscateButton">Obfuscate</button>
+        <div id="output"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
